# fooddb

./: .gitignore  CLAUDE.md  README.md  claude_desktop_config.example.json  pyproject.toml
docs/: architecture.md  cli.md  data-dictionary.md  embeddings.md  mcp-server.md
fooddb/: __main__.py  cli.py  embeddings.py  import_data.py  models.py  server.py
tests/: test_ingredients.py  test_mcp.py  test_models.py  test_server.py
